finished the hero and header container

--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
     <div class="hero">
         <div class="hero-left-section">
             <h1>This website is awesome</h1>
-            <p>This website is a landing page project provided by The Odin Project</p>
+            <p>This website is a landing page project provided by The Odin Project. I will be a web developer someday!</p>
             <button>Sign up</button>
-
         </div>
         <div class="hero-right-section">
-            <img src="images\hero-image.JPG" height="500">
+            <img src="images\hero-image.JPG" height="380" width >
         </div>
 
     </div>
