started the info section

--- a/index.html
+++ b/index.html
@@ -35,5 +35,16 @@
         </div>
 
     </div>
+
+    <div class="info-section">
+        <h1>Some random information.</h1>
+        <div class="info-sub-section">
+            <div class="info-a"></div>
+            <div class="info-b"></div>
+            <div class="info-c"></div>
+            <div class="info-d"></div>
+        </div>
+        
+    </div>
 </body>
 </html>
