Finished the info-section

--- a/index.html
+++ b/index.html
@@ -38,13 +38,42 @@
 
     <div class="info-section">
         <h1>Some random information.</h1>
-        <div class="info-sub-section">
-            <div class="info-a"></div>
-            <div class="info-b"></div>
-            <div class="info-c"></div>
-            <div class="info-d"></div>
+        <div class="pic-section">
+            <div class="pic-a">
+                <img src="images\info-image1.JPG">
+            </div>
+            <div class="pic-b">
+                <img src="images\info-image2.JPG">
+            </div>
+            <div class="pic-c">
+                <img src="images\info-image3.JPG">
+            </div>
+            <div class="pic-d">
+                <img src="images\info-image4.JPG">
+            </div>
         </div>
+
+        <div class="info-sub-section">
+            <div class="info-a">
+                <p>random text</p>
+            </div>
+            <div class="info-b">
+                <p>random text</p>
+            </div>
+            <div class="info-c">
+                <p>random text</p>
+            </div>
+            <div class="info-d">
+                <p>random text</p>
+            </div>
+        </div>
+
         
+    </div>
+
+    <div class="quote-section">
+        
+
     </div>
 </body>
 </html>
