--- a/index.html
+++ b/index.html
@@ -83,8 +83,18 @@
         <div class="quo-con2">
             <h1>- Thor, God of Thunder</h1>
         </div>
-        
-       
+    </div>
+
+    <div class="CTA">
+        <div class ="cta-container">
+            <div class ="left-cta-container">
+                <h1>Call to action! It's time!</h1>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class ="right-cta-container">
+                <button>Sign up</button>
+            </div>
+        </div>
 
     </div>
 </body>
