--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
                 <button>Sign up</button>
             </div>
         </div>
+    </div>
 
+    <div class="footer">
+        <p>Copyright &copy; The Odin Project 2021</p>
     </div>
 </body>
 </html>
